# OG-Lapack

./: CMakeLists.txt  CTestCustom.cmake.in  INSTALL.md  LICENSE.txt  README  README.md  lapack_testing.py
BLAS/: CMakeLists.txt
BLAS/SRC/: CMakeLists.txt  xerbla.f  xerbla.f90  xerbla_handle.f90
BLAS/TESTING/: CMakeLists.txt
CMAKE/: CheckCPUID.cmake  MultiBin.cmake  MultiInstructionTarget.cmake  MultiLib.cmake  verinfo.py
SRC/: CMakeLists.txt
TESTING/: CMakeLists.txt  testing_summary.c
TESTING/EIG/: CMakeLists.txt
TESTING/LIN/: CMakeLists.txt
TESTING/MATGEN/: CMakeLists.txt
lapacke/: CMakeLists.txt
